--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -36,7 +36,7 @@ on:
       - "**/action.yaml"
 
 concurrency:
-  group: ${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.event.inputs.ref || github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -47,12 +47,31 @@ jobs:
     name: Verify Documentation
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          ref: ${{ github.event.inputs.ref || github.event.pull_request.head.sha || github.ref }}
 
       - name: Ensure updates of *.1.md and *.1 pairs
+        if: ${{ github.event_name == 'pull_request' }}
         run: |
-          ./scripts/verify_man_md_sync.sh --base-ref origin/main --fetch-depth 1
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            case "${{ github.base_ref }}" in
+              main)
+                base_ref="origin/main"
+                ;;
+              release-v*)
+                base_ref="origin/${{ github.base_ref }}"
+                ;;
+              *)
+                echo "Unsupported base branch: ${{ github.base_ref }}"
+                exit 1
+                ;;
+            esac
+          fi
+
+          ./scripts/verify_man_md_sync.sh --base-ref ${base_ref} --fetch-depth 1
+
   #
   # CODE VERIFICATION
   #
@@ -60,9 +79,10 @@ jobs:
     name: Verify and Analyze Code
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
+          ref: ${{ github.event.inputs.ref || github.event.pull_request.head.sha || github.ref }}
           submodules: true
 
       - name: Install Dependencies
@@ -97,6 +117,7 @@ jobs:
       - name: Check with errcheck
         run: |
           make check-err
+
   #
   # TOOLS BUILD VERIFICATION
   #
@@ -106,9 +127,10 @@ jobs:
       - verify-analyze-code
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
+          ref: ${{ github.event.inputs.ref || github.event.pull_request.head.sha || github.ref }}
           submodules: true
 
       - name: Install Dependencies
@@ -133,6 +155,7 @@ jobs:
         run: |
           make clean
           make e2e-inst-signatures
+
   #
   # CODE TESTS
   #
@@ -145,6 +168,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
+          ref: ${{ github.event.inputs.ref || github.event.pull_request.head.sha || github.ref }}
           submodules: true
 
       - name: Install Dependencies
@@ -157,6 +181,7 @@ jobs:
       - name: Run Scripts Unit Tests
         run: |
           make run-scripts-test-unit
+
   #
   # INTEGRATION TESTS
   #
@@ -169,6 +194,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
+          ref: ${{ github.event.inputs.ref || github.event.pull_request.head.sha || github.ref }}
           submodules: true
 
       - name: Install Dependencies
@@ -177,6 +203,7 @@ jobs:
       - name: Run Integration Tests
         run: |
           sudo env "PATH=$PATH" make test-integration
+
   #
   # PERFORMANCE TESTS
   #
@@ -189,6 +216,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
+          ref: ${{ github.event.inputs.ref || github.event.pull_request.head.sha || github.ref }}
           submodules: true
 
       - name: Install Dependencies
